be able to launch child apps based on http url
