# compositor-proxy/src/App.ts
@@ -1,7 +1,8 @@
 import { App, HttpRequest, HttpResponse, us_listen_socket } from 'uWebSockets.js'
-import {findProxySessionByIdentity, findProxySessionsByCompositorSessionId, ProxySession} from './ProxySession'
+import { findProxySessionByKey, ProxySession } from './ProxySession'
 import {
   DELWebFD,
+  GETApplication,
   GETWebFD,
   GETWebFDStream,
   OPTIONSPreflightRequest,
@@ -10,7 +11,8 @@ import {
   POSTMkstempMmap,
   PUTWebFDStream,
 } from './AppController'
-import { connectionHandling, signalHandling } from './SignalingController'
+import { channelHandling, signalHandling } from './AppWebSocketsController'
+import { config } from './config'
 
 function withParams(
   paramCount: number,
@@ -27,21 +29,21 @@ function withParams(
 
 function withAuth(authorizedAction: (proxySession: ProxySession, res: HttpResponse, req: HttpRequest) => void) {
   return (res: HttpResponse, req: HttpRequest) => {
-    const proxySession = findProxySessionByIdentity(req.getHeader('x-proxy-identity-id'))
+    const proxySession = findProxySessionByKey(req.getHeader('x-greenfield-proxy-session-key'))
     if (proxySession) {
       authorizedAction(proxySession, res, req)
     } else {
       res
         .writeStatus('401 Unauthorized')
         .writeHeader('Content-Type', 'text/plain')
-        .end('No or invalid x-proxy-identity-id header.')
+        .end('No or invalid x-greenfield-proxy-session-key header.')
     }
   }
 }
 
 export function createApp({ host, port }: { host: string; port: number }): Promise<us_listen_socket> {
   return new Promise<us_listen_socket>((resolve, reject) => {
-    App()
+    const templatedApp = App()
       .options('/mkfifo', OPTIONSPreflightRequest('POST'))
       .post('/mkfifo', withAuth(POSTMkFifo))
 
@@ -56,18 +58,23 @@ export function createApp({ host, port }: { host: string; port: number }): Promi
       .get('/fd/:fd/stream', withAuth(withParams(1, GETWebFDStream)))
       .put('/fd/:fd/stream', withAuth(withParams(1, PUTWebFDStream)))
 
-      .options('/:clientId/:surfaceId/encoder/keyframe', OPTIONSPreflightRequest('POST'))
-      .post('/:clientId/:surfaceId/encoder/keyframe', withAuth(withParams(2, POSTEncoderKeyframe)))
+      .options('/client/:clientId/surface/:surfaceId/encoder/keyframe', OPTIONSPreflightRequest('POST'))
+      .post('/client/:clientId/surface/:surfaceId/encoder/keyframe', withAuth(withParams(2, POSTEncoderKeyframe)))
 
-      .ws('/signaling', signalHandling())
-      .ws('/', connectionHandling())
+      .ws('/signal', signalHandling())
+      .ws('/channel', channelHandling())
 
-      .listen(host, port, (listenSocket) => {
-        if (listenSocket) {
-          resolve(listenSocket)
-        } else {
-          reject(new Error(`Failed to start compositor proxy on host: ${host} with port ${port}`))
-        }
-      })
+    for (const { path } of Object.values(config.public.applications)) {
+      // TODO check if path starts with a reserved path
+      templatedApp.get(path, GETApplication)
+    }
+
+    templatedApp.listen(host, port, (listenSocket) => {
+      if (listenSocket) {
+        resolve(listenSocket)
+      } else {
+        reject(new Error(`Failed to start compositor proxy on host: ${host} with port ${port}`))
+      }
+    })
   })
 }
